# CrewPush

ai_server/: .gitignore  README.md  briefing.md  pyproject.toml  report.md  trained_agents_data.pkl  training_data.pkl
ai_server/src/ai_server/: crew.py  flow.py  main.py  train_run.py
ai_server/src/ai_server/config/: agents.yaml  tasks.yaml
frontend/: package-lock.json  package.json
frontend/src/: main.tsx
