[project]
name = "ai_server"
version = "0.1.0"
description = "ai-server using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
ai_server = "ai_server.main:run"
run_crew = "ai_server.main:run"
train = "ai_server.main:train"
replay = "ai_server.main:replay"
test = "ai_server.main:test"
run_with_trigger = "ai_server.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
